--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     <link rel="manifest" href="favicons/site.webmanifest">
     <meta property="og:title" content="Márcia Matias Portfolio" />
     <meta property="og:type" content="website" />
-    <link rel="manifest" href="favicons/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="theme-color" content="#ffffff">
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <title>Márcia Matias | Portfolio</title>
   </head>
